[package]
name = "clap_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "sync"] }
serde_json = "1.0.150"
async-openai = { version = "0.41.0", features = [ "chat-completion", "byot" ] }
dotenvy = "0.15.7"
